fix: fix README.md and add proper name to pr-slack

--- a/.github/workflows/pr-slack-notification.yml
+++ b/.github/workflows/pr-slack-notification.yml
@@ -24,7 +24,7 @@ defaults:
     shell: bash -euxo pipefail {0}
 
 jobs:
-  debug:
+  github-context:
     runs-on: ubuntu-latest
     steps:
       - name: Debug
