--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,4 +1,3 @@
----
 name: run-tests
 
 on:
@@ -9,28 +8,29 @@ permissions: read-all
 env:
   SOPS_AGE_KEY: ${{ secrets.SOPS_AGE_KEY }}
   MISE_SOPS_AGE_KEY: ${{ secrets.SOPS_AGE_KEY }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   docker-mise-linux:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-24.04, ubuntu-24.04-arm, macos-15]
+        os: [ubuntu-24.04, ubuntu-24.04-arm]
     timeout-minutes: 30
     steps:
-      - name: Checkout Code
+      - name: 🛠️ Checkout Code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: Run mise
+      - name: 🚀 Run mise
         run: |
-          docker run --rm -it \
+          docker run --rm -i \
             --env SOPS_AGE_KEY --env MISE_SOPS_AGE_KEY \
             -v "$PWD:/mnt" \
             -v "/var/run/docker.sock:/var/run/docker.sock" \
             --workdir /mnt \
-            bash bash -c 'set -euxo pipefail && \
+            bash bash -c 'set -euo pipefail && \
               apk add docker && \
-              wget https://mise.run -O - | sh && \
+              wget -q https://mise.run -O - | sh && \
               eval "$(~/.local/bin/mise activate bash)" && \
               mise run "create:*:*" && \
               mise run "delete:*:*" \
@@ -40,28 +40,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-24.04, ubuntu-24.04-arm, macos-15]
+        os: [ubuntu-24.04, ubuntu-24.04-arm]
     timeout-minutes: 30
     steps:
-      - name: Checkout Code
+      - name: 🛠️ Checkout Code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: Run mise
+      - name: 🚀 Run mise
         run: |
-          wget https://mise.run -O - | sh
+          wget -q https://mise.run -O - | sh
           eval "$(~/.local/bin/mise activate bash)"
-          mise run "create:*:*"
-          mise run "delete:*:*"
-
-  mise-windows:
-    runs-on: windows-2025
-    timeout-minutes: 30
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Run mise
-        run: |
-          scoop install mise
           mise run "create:*:*"
           mise run "delete:*:*"
