--- a/clusters/kind02-internal/.env.yaml
+++ b/clusters/kind02-internal/.env.yaml
@@ -1,21 +1,1 @@
-SECRET: ENC[AES256_GCM,data:QIOd+nLFzAQ=,iv:6o+BhThDyGAQ1jwjG04bS95c55xdUCdB6XhezYrKv90=,tag:tnwKw9zZjc7OLDi7YbiYnw==,type:str]
-sops:
-  kms: []
-  gcp_kms: []
-  azure_kv: []
-  hc_vault: []
-  age:
-    - recipient: age1jjuamrdk3vrk6g8qhrjnqtt4x2yvvxw7fz2nkvf78398dj7vav7s74z4zz
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTNXVyZWd4bTFWekVKbjdn
-        dzlPcWZnWUxsME9UWlN2NjgzMGhoQ1VIV0drCnlScGZTYitqcTYyR291eVArYWVs
-        c1JyU2FTVWJBajdWdFVGRFN5TXFsMWMKLS0tIEt2WjdNN3FWaU5UQnNwRDNseTVy
-        TXhtbU94bVFjOTJiUmQyQ2U5VWU0WlkK5Ur8KSyl5/4/AJrADYLRF/27r7hEZzY1
-        0Qo5LZDZOLXoJ6RBEAYi7WNj/hYbgoBd6maB93fMUaEW6MfC5zK6DA==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-03-14T09:14:06Z"
-  mac: ENC[AES256_GCM,data:kDFNXFwtCNtUISMdYQG0yu38ORYdwsp5v02KrzFZS/zj3mPSNU71RGRPn44Vp9noztBRzz0C6kwql7BaWC2twDVAlR9FIrQDl+jf9PQiO9kBmrQo60TJq4gFe0jesWaBFyKDAG3ffi/oELJs8NZVkbBXwpshNoLs0C06nwc989g=,iv:fPVkLhox+xd5KXFmC6t+CJJ8c4Nsjh8u0DSCvnanYKM=,tag:2isNCgC8yxDaZOojyqgEjA==,type:str]
-  pgp: []
-  unencrypted_suffix: _unencrypted
-  version: 3.9.4
+# This file should contains the secrets and should be encrypted using SOPS
