--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,6 +2,13 @@ name: run-tests
 
 on:
   workflow_dispatch:
+  push:
+    branches-ignore:
+      - main
+    paths:
+      - ".github/workflows/run-tests.yml"
+      - "**kind**"
+      - "**k3s**"
 
 permissions: read-all
 
@@ -15,8 +22,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-24.04, ubuntu-24.04-arm]
-    timeout-minutes: 30
+        # os: [ubuntu-24.04, ubuntu-24.04-arm]
+        os: [ubuntu-24.04]
+    timeout-minutes: 10
     steps:
       - name: 🛠️ Checkout Code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -24,7 +32,7 @@ jobs:
       - name: 🚀 Run mise
         run: |
           docker run --rm -i \
-            --env SOPS_AGE_KEY --env MISE_SOPS_AGE_KEY \
+            --env SOPS_AGE_KEY --env MISE_SOPS_AGE_KEY --env CLICOLOR_FORCE=1 \
             -v "$PWD:/mnt" \
             -v "/var/run/docker.sock:/var/run/docker.sock" \
             --workdir /mnt \
@@ -40,8 +48,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-24.04, ubuntu-24.04-arm]
-    timeout-minutes: 30
+        # os: [ubuntu-24.04, ubuntu-24.04-arm]
+        os: [ubuntu-24.04]
+    timeout-minutes: 10
     steps:
       - name: 🛠️ Checkout Code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
