--- a/mise.toml
+++ b/mise.toml
@@ -12,6 +12,8 @@ experimental = true
 trusted_config_paths = ["/"]
 
 [env]
+# Issue/Bug: https://github.com/jdx/mise/discussions/4641
+# _.file = { path = [".env.yaml"], redact = true }
 _.file = ".env.yaml"
 # Directory which contains the clusters mise configurations
 CLUSTERS_DIRECTORY = "{{ config_root }}/clusters"
@@ -20,6 +22,19 @@ CLUSTERS_KUBECONFIG_DIRECTORY = "{{ config_root }}/clusters/.kubeconfig"
 # Directory which contains the scripts to create and delete the clusters
 CLUSTERS_RUN_SCRIPT_DIRECTORY = "{{ config_root }}/scripts"
 
+[tasks."create-all"]
+description = 'Create all K8s clusters'
+run = 'mise run "create:*:*"'
+
+[tasks."delete-all"]
+description = 'Delete all K8s clusters'
+confirm = 'Are you sure you want to delete all K8s clusters created by mise?'
+# Do not use 'depends = ["delete:*:*"]' because it will run before question above
+run = 'mise run "delete:*:*"'
+
+[tasks.test]
+run = 'mise run --cd "${CLUSTERS_DIRECTORY}/tests" local_test'
+
 #######################################
 # Kind
 #######################################
@@ -27,19 +42,27 @@ CLUSTERS_RUN_SCRIPT_DIRECTORY = "{{ config_root }}/scripts"
 [tasks."create:kind:kind01-internal"]
 description = 'Create kind01.internal K8s cluster'
 # Run mise again due to missing support for SOPS-encrypted environment variables in tasks: https://github.com/jdx/mise/discussions/4593
-run = 'cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" && mise run create:kind01-internal'
+run = 'mise run --cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" create:kind01-internal'
 
 [tasks."delete:kind:kind01-internal"]
 description = 'Delete kind01.internal K8s cluster'
-run = 'cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" && mise run delete:kind01-internal'
+run = 'mise run --cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" delete:kind01-internal'
 
 [tasks."create:kind:kind02-internal"]
 description = 'Create kind02.internal K8s cluster'
-run = 'cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" && mise run create:kind02-internal'
+run = 'mise run --cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" create:kind02-internal'
 
 [tasks."delete:kind:kind02-internal"]
 description = 'Delete kind02.internal K8s cluster'
-run = 'cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" && mise run delete:kind02-internal'
+run = 'mise run --cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" delete:kind02-internal'
+
+[tasks."create-kind-all"]
+description = 'Create kind K8s clusters'
+run = 'mise run "create:kind:*"'
+
+[tasks."delete-kind-all"]
+description = 'Delete kind K8s clusters'
+run = 'mise run "delete:kind:*"'
 
 #######################################
 # K3d
@@ -48,16 +71,24 @@ run = 'cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" && mise run delete:kind0
 [tasks."create:k3d:k3d01-internal"]
 description = 'Create k3d01.internal K8s cluster'
 # Run mise again due to missing support for SOPS-encrypted environment variables in tasks: https://github.com/jdx/mise/discussions/4593
-run = 'cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" && mise run create:k3d01-internal'
+run = 'mise run --cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" create:k3d01-internal'
 
 [tasks."delete:k3d:k3d01-internal"]
 description = 'Delete k3d01.internal K8s cluster'
-run = 'cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" && mise run delete:k3d01-internal'
+run = 'mise run --cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" delete:k3d01-internal'
 
 [tasks."create:k3d:k3d02-internal"]
 description = 'Create k3d02.internal K8s cluster'
-run = 'cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" && mise run create:k3d02-internal'
+run = 'mise run --cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" create:k3d02-internal'
 
 [tasks."delete:k3d:k3d02-internal"]
 description = 'Delete k3d02.internal K8s cluster'
-run = 'cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" && mise run delete:k3d02-internal'
+run = 'mise run --cd "${CLUSTERS_DIRECTORY}/${MISE_TASK_NAME##*:}" delete:k3d02-internal'
+
+[tasks."create-k3d-all"]
+description = 'Create k3d K8s clusters'
+run = 'mise run "create:k3d:*"'
+
+[tasks."delete-k3d-all"]
+description = 'Delete k3d K8s clusters'
+run = 'mise run "delete:k3d:*"'
