--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -6,6 +6,7 @@ BASH_SHFMT_ARGUMENTS: --case-indent --indent 2 --space-redirects
 
 DISABLE_LINTERS:
   - MARKDOWN_MARKDOWN_LINK_CHECK # Using lychee instead
+  - REPOSITORY_DEVSKIM
   - SPELL_CSPELL
   - TERRAFORM_TERRASCAN # Hard to configure - no documentation of the config file
 
