--- a/clusters/tests/mise.toml
+++ b/clusters/tests/mise.toml
@@ -6,4 +6,4 @@ sops = "3.9.4"
 _.file = ".env.yaml"
 
 [tasks.local_test]
-run = ['kind --version', 'echo "${my_local_secret}"', 'echo "${my_global_secret}"', '${CLUSTERS_RUN_SCRIPT_DIRECTORY}/test.sh']
+run = ['echo "${PATH}"','kind --version', 'echo "${my_local_secret}"', 'echo "${my_global_secret}"', '${CLUSTERS_RUN_SCRIPT_DIRECTORY}/test.sh']
