--- a/mise.toml
+++ b/mise.toml
@@ -1,4 +1,5 @@
 [tools]
+# Tools need to be downloaded each time because if they were downloaded within 'tasks' (which run in parallel), the PATH propagation would not work properly.
 # keep-sorted start
 k3d = "5.8.3"
 kind = "0.27.0"
@@ -32,7 +33,10 @@ confirm = 'Are you sure you want to delete all K8s clusters created by mise?'
 # Do not use 'depends = ["delete:*:*"]' because it will run before question above
 run = 'mise run "delete:*:*"'
 
-[tasks.test]
+[tasks.test1]
+run = 'mise run --cd "${CLUSTERS_DIRECTORY}/tests" local_test'
+
+[tasks.test2]
 run = 'mise run --cd "${CLUSTERS_DIRECTORY}/tests" local_test'
 
 #######################################
