--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,8 +13,6 @@ on:
 permissions: read-all
 
 env:
-  SOPS_AGE_KEY: ${{ secrets.SOPS_AGE_KEY }}
-  MISE_SOPS_AGE_KEY: ${{ secrets.SOPS_AGE_KEY }}
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 defaults:
@@ -31,30 +29,31 @@ jobs:
         run: |
           echo "${GITHUB_CONTEXT}"
   docker-mise-linux:
-    if: ${{ (!startsWith(github.head_ref, 'renovate/') && !startsWith(github.head_ref, 'release-please--')) }}
+    if: ${{ (!startsWith(github.ref_name, 'renovate/') && !startsWith(github.ref_name, 'release-please--')) }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         # os: [ubuntu-24.04, ubuntu-24.04-arm]
         os: [ubuntu-24.04]
+        type: [kind, k3d]
     timeout-minutes: 10
     steps:
       - name: 🛠️ Checkout Code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: 🚀 Run mise
+        env:
+          TYPE: ${{ matrix.type }}
         run: |
-          docker run --rm -i \
-            --env SOPS_AGE_KEY --env MISE_SOPS_AGE_KEY --env CLICOLOR_FORCE=1 \
-            -v "$PWD:/mnt" \
-            -v "/var/run/docker.sock:/var/run/docker.sock" \
+          docker run --rm -i --env GITHUB_TOKEN --env CLICOLOR_FORCE=1 --env TYPE \
+            -v "$PWD:/mnt" -v "/var/run/docker.sock:/var/run/docker.sock" \
             --workdir /mnt \
             bash bash -c 'set -euo pipefail && \
               apk add docker && \
               wget -q https://mise.run -O - | sh && \
               eval "$(~/.local/bin/mise activate bash)" && \
-              mise run "create-kind-all" ::: "create-k3d-all" && \
-              mise run "delete-kind-all" ::: "delete-k3d-all" && \
+              mise run "create-${TYPE}-all" && \
+              mise run "delete-${TYPE}-all" && \
               echo "*** Completed ..." \
             '
 
@@ -65,6 +64,7 @@ jobs:
       matrix:
         # os: [ubuntu-24.04, ubuntu-24.04-arm]
         os: [ubuntu-24.04]
+        type: [kind, k3d]
     timeout-minutes: 10
     steps:
       - name: 🛠️ Checkout Code
@@ -74,6 +74,8 @@ jobs:
         uses: jdx/mise-action@5083fe46898c414b2475087cc79da59e7da859e8 # v2
 
       - name: 🚀 Run mise
+        env:
+          TYPE: ${{ matrix.type }}
         run: |
-          mise run "create-kind-all" ::: "create-k3d-all"
-          mise run "delete-kind-all" ::: "delete-k3d-all"
+          mise run "create-${TYPE}-all"
+          mise run "delete-${TYPE}-all"
