--- a/mise.toml
+++ b/mise.toml
@@ -1,6 +1,8 @@
 [tools]
 # Tools need to be downloaded each time because if they were downloaded within 'tasks' (which run in parallel), the PATH propagation would not work properly.
 # keep-sorted start
+aws = "2.24.24"
+eksctl = "0.205.0"
 k3d = "5.8.3"
 kind = "0.27.0"
 # keep-sorted end
@@ -11,16 +13,20 @@ trusted_config_paths = ["/"]
 task_output = "prefix"
 
 [env]
+AWS_PRIMARY_DOMAIN = "aws.mylabs.dev"
+AWS_K8S_DOMAIN = "k8s.{{ env.AWS_PRIMARY_DOMAIN }}"
 # keep-sorted start
+# Default AWS region if not overridden
+AWS_REGION = "us-east-1"
+CLICOLOR_FORCE = "1"
 # Directory which contains the clusters mise configurations
 CLUSTERS_DIRECTORY = "{{ config_root }}/clusters"
 # Directory which contains the kubeconfig files for the created clusters (will be create if not exists)
 CLUSTERS_KUBECONFIG_DIRECTORY = "{{ config_root }}/clusters/.kubeconfig"
 # Directory which contains the scripts to create and delete the clusters
 CLUSTERS_RUN_SCRIPT_DIRECTORY = "{{ config_root }}/scripts"
-CLICOLOR_FORCE = "1"
 MISE_TASK_OUTPUT = "prefix"
-# keep-sorted stop
+# keep-sorted end
 
 [tasks."create-all"]
 description = 'Create all K8s clusters'
@@ -32,9 +38,47 @@ confirm = 'Are you sure you want to delete all K8s clusters created by mise?'
 # Do not use 'depends = ["delete:*:*"]' because it will run before question above
 run = 'mise run "delete:*:*"'
 
-#######################################
+##############################################################################
+# Primary AWS Account - CloudFormation - Route53 + GitHub Actions Access + IAM role
+##############################################################################
+
+[tasks."create:aws-primary:cf-route53-gh-action-iam-role-oidc"]
+description = 'Configure Primary AWS Account - Create CloudFormation - Route53 + GitHub Actions Access + IAM role'
+confirm = '''
+Make sure you have the following AWS environment variables set for your "Primary AWS account":
+- AWS_ACCESS_KEY_ID
+- AWS_SECRET_ACCESS_KEY
+- AWS_SESSION_TOKEN - in case you are using temporary credentials
+'''
+env.GIT_REPOSITORY = "{{ exec(command='git config --get remote.origin.url') }}"
+env.AWS_CLOUDFORMATION_TEMPLATE_FILE = "cloudformation/aws-cf-route53-gh-action-iam-role-oidc.yml"
+run = '''
+  eval aws cloudformation deploy --capabilities CAPABILITY_NAMED_IAM \
+    --stack-name route53-gh-action-iam-role-oidc \
+    --parameter-overrides "PrimaryDomain=${AWS_PRIMARY_DOMAIN} K8sDomain=${AWS_K8S_DOMAIN}" \
+    --template-file "${AWS_CLOUDFORMATION_TEMPLATE_FILE}" \
+    --tags "git_repository=${GIT_REPOSITORY}//${AWS_CLOUDFORMATION_TEMPLATE_FILE}"
+'''
+
+[tasks."delete:aws-primary:cf-route53-gh-action-iam-role-oidc"]
+description = 'Primary AWS Account - Delete CloudFormation - Route53 + GitHub Actions Access + IAM role'
+confirm = '''
+Are you sure you want to delete the CloudFormation (Route53 + GitHub Actions Access + IAM role) from Primary AWS Account?
+
+Make sure you have the following AWS environment variables set for your "Primary AWS account":
+- AWS_ACCESS_KEY_ID
+- AWS_SECRET_ACCESS_KEY
+- AWS_SESSION_TOKEN - in case you are using temporary credentials
+'''
+
+run = '''
+  aws cloudformation delete-stack --stack-name route53-gh-action-iam-role-oidc
+  aws cloudformation wait stack-delete-complete --stack-name route53-gh-action-iam-role-oidc
+'''
+
+##############################################################################
 # Kind
-#######################################
+##############################################################################
 
 [tasks."create:kind:kind01-internal"]
 description = 'Create kind01.internal K8s cluster'
@@ -61,9 +105,9 @@ run = 'mise run "create:kind:*"'
 description = 'Delete kind K8s clusters'
 run = 'mise run "delete:kind:*"'
 
-#######################################
+##############################################################################
 # K3d
-#######################################
+##############################################################################
 
 [tasks."create:k3d:k3d01-internal"]
 description = 'Create k3d01.internal K8s cluster'
@@ -89,3 +133,23 @@ run = 'mise run "create:k3d:*"'
 [tasks."delete-k3d-all"]
 description = 'Delete k3d K8s clusters'
 run = 'mise run "delete:k3d:*"'
+
+##############################################################################
+# eksctl
+##############################################################################
+
+[tasks."create:eksctl:k01-k8s-aws-mylabs-dev"]
+description = 'Create k01.k8s.aws.mylabs.dev K8s cluster'
+run = 'mise run --env ${MISE_TASK_NAME##*:} create:${MISE_TASK_NAME##*:}'
+
+[tasks."delete:eksctl:k01-k8s-aws-mylabs-dev"]
+description = 'Delete k01.k8s.aws.mylabs.dev K8s cluster'
+run = 'mise run --env ${MISE_TASK_NAME##*:} delete:${MISE_TASK_NAME##*:}'
+
+[tasks."create-eksctl-all"]
+description = 'Create eksctl K8s clusters'
+run = 'mise run "create:eksctl:*"'
+
+[tasks."delete-eksctl-all"]
+description = 'Delete eksctl K8s clusters'
+run = 'mise run "delete:eksctl:*"'
