fix: correct syntax for token.actions.githubusercontent.com in IAM role policy

--- a/cloudformation/route53-gh-action-iam-role-oidc.yml
+++ b/cloudformation/route53-gh-action-iam-role-oidc.yml
@@ -76,7 +76,7 @@ Resources:
               - "sts:AssumeRoleWithWebIdentity"
             Condition:
               StringLike:
-                token.actions.githubusercontent.com:sub: !Ref SubjectClaimFilters
+                "token.actions.githubusercontent.com:sub": !Ref SubjectClaimFilters
       Description: Service Role for use in GitHub Actions
       RoleName: !Ref RoleName
       MaxSessionDuration: 36000
