--- a/cloudformation/route53-gh-action-iam-role-oidc.yml
+++ b/cloudformation/route53-gh-action-iam-role-oidc.yml
@@ -3,37 +3,45 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: Route53 entry and IAM role for GitHub Actions OIDC federated role
 
 Parameters:
-  PrimaryDomain:
-    Description: "Primary domain for AWS services (e.g. aws.mylabs.dev)"
-    Type: String
-  K8sDomain:
-    Description: "K8s domain hosting cluster subdomains (e.g. k8s.aws.mylabs.dev)"
-    Type: String
-  GithubActionsThumbprint:
-    Type: CommaDelimitedList
-    Default: 6938fd4d98bab03faadb97b34396831e3780aea1
-    Description: >
-      Comma separated list of thumbprints for GitHub Actions tokens.
-      Default comes from https://github.blog/changelog/2022-01-13-github-actions-update-on-oidc-based-deployments-to-aws/
+  # keep-sorted start
   AudienceList:
     Type: CommaDelimitedList
     Default: sts.amazonaws.com
     Description: >
       Comma separated list of allowed audience for the tokens.
       Default is audience for the official AWS configure action from https://github.com/aws-actions/configure-aws-credentials
+  GithubActionsThumbprint:
+    Type: CommaDelimitedList
+    Default: 6938fd4d98bab03faadb97b34396831e3780aea1
+    Description: >
+      Comma separated list of thumbprints for GitHub Actions tokens.
+      Default comes from https://github.blog/changelog/2022-01-13-github-actions-update-on-oidc-based-deployments-to-aws/
+  K8sDomain:
+    Description: "K8s domain hosting cluster subdomains (e.g. k8s.aws.mylabs.dev)"
+    Type: String
+  ManagedPolicyArns:
+    Type: CommaDelimitedList
+    Description: Comma separated list for arns for managed policies to attach to the role
+  ManagementIamRoleName:
+    Description: "Name of the new IAM role used by GitHub Actions"
+    Type: String
+    Default: "GitHubFederatedRole"
+  PrimaryDomain:
+    Description: "Primary domain for AWS services (e.g. aws.mylabs.dev)"
+    Type: String
+    AllowedPattern: "^[a-zA-Z0-9.-]+$"
+    ConstraintDescription: "PrimaryDomain must be a valid domain name."
   SubjectClaimFilters:
     Type: CommaDelimitedList
     Description: >
       Subject claim filter for valid tokens.
-      Default allows any branch or tag of the McK-Internal/VM-wiz-automation to assume the role.
+      Allows any branch or tag of the ruzickap/k8s-multicluster-gitops to assume the role.
       See https://docs.github.com/en/actions/deployment/security-hardening-your-deployments/about-security-hardening-with-openid-connect#example-subject-claims
       for examples of filtering by branch or deployment environment.
-  ManagedPolicyArns:
-    Type: CommaDelimitedList
-    Description: Comma separated list for arns for managed policies to attach to the role
-  RoleName:
-    Description: "Name of the new IAM role used by GitHub Actions"
+  UserArn:
+    Description: "ARN of the user allowed to assume the role"
     Type: String
+  # keep-sorted end
 
 Resources:
   PrimaryHostedZone:
@@ -77,8 +85,14 @@ Resources:
             Condition:
               StringLike:
                 "token.actions.githubusercontent.com:sub": !Ref SubjectClaimFilters
+          - Sid: AllowUser
+            Effect: Allow
+            Principal:
+              AWS: !Ref UserArn
+            Action:
+              - "sts:AssumeRole"
       Description: Service Role for use in GitHub Actions
-      RoleName: !Ref RoleName
+      RoleName: !Ref ManagementIamRoleName
       MaxSessionDuration: 36000
       ManagedPolicyArns: !Ref ManagedPolicyArns
 
